--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,13 +29,13 @@ tokio-openssl = { version = "0.6", optional = true }
 tokio-rustls = { version = "0.24", optional = true }
 hyper-rustls = { version = "0.24", optional = true }
 
-webpki = { version = "0.22", optional = true }
+webpki = { version = "0.22", optional = true, features= ["std"] }
 rustls-native-certs = { version = "0.6.3", optional = true }
-webpki-roots = { version = "0.23.1", optional = true }
+webpki-roots = { version = "0.25.2", optional = true }
 headers = "0.3"
 
 [dev-dependencies]
-tokio = { version = "1.29", features = ["full"] }
+tokio = { version = "1.32", features = ["full"] }
 hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
 
 [features]
