--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ native-tls = { version = "0.2.11", optional = true }
 openssl = { version = "0.10.62", optional = true }
 tokio-openssl = { version = "0.6.4", optional = true }
 tokio-rustls = { version = "0.26.0", optional = true, default-features = false, features = ["logging", "tls12"] }
-hyper-rustls = { version = "0.27.1", optional = true, default-features = false, features = ["http1", "logging", "native-tokio", "ring", "tls12"] }
+hyper-rustls = { version = "0.27.1", optional = true }
 
 webpki = { version = "0.22", optional = true }
 rustls-native-certs = { version = "0.7.0", optional = true }
