--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ openssl-tls = ["openssl", "tokio-openssl"]
 tls = ["tokio-native-tls", "hyper-tls", "native-tls"]
 # note that `rustls-base` is not a valid feature on its own - it will configure rustls without root
 # certificates!
-rustls-base = ["tokio-rustls", "hyper-rustls", "webpki"]
+rustls-base = ["tokio-rustls", "hyper-rustls"]
 rustls = ["rustls-base", "rustls-native-certs", "hyper-rustls/native-tokio"]
 rustls-webpki = ["rustls-base", "webpki-roots", "hyper-rustls/webpki-tokio"]
 default = ["tls"]
